# Cpp-Logo-Project

./: CMakeLists.txt  README.md
src/: Coordinate.h  Triangle.cpp  Triangle.h  main.cpp
